--- a/wwr/Portfolio/graphicdesign.html
+++ b/wwr/Portfolio/graphicdesign.html
@@ -10,8 +10,10 @@
 
 <div class="site">
 	
-	<nav class="nav">
-		<div class="nav__title">Makayla Rockwood</div>
+  <nav class="nav">
+		<a id="logo_link" href="index.html">
+			<img class="logo" src="images/mainlogo.png" alt="My Logo">
+		</a>
 		<ul class="nav__list">
 			<li class="nav__item"><a href=index.html>UI/UX Design</a></li> 
 			<li class="nav__item"><a href=graphicdesign.html>Graphic Design</a></li>
@@ -19,45 +21,126 @@
 		</ul>
 	</nav>
 
-    <div class="hero">
-		<h1>Graphic Design</h1>
+  <div class="hero">
+		<h1>Graphic Design.</h1>
+	</div>
+
+  <div class="title">
+		<h1>Branding</h1>
 	</div>
 
     <div class="row">
         <div class="column">
+          <div class="content">
           <img src="images/brand.png" alt="Branding" style="width:100%">
+          <h3>Business Card</h3>
+          <p>Mockup design for a personal project.</p>
         </div>
+      </div>
+
         <div class="column">
+          <div class="content">
           <img src="images/logo1.png" alt="Branding" style="width:100%">
+          <h3>Backyard Party Rentals</h3>
+          <p>Offical logo design for a party rental company in Georgia.</p>
         </div>
+      </div>
+
         <div class="column">
+          <div class="content">
           <img src="images/logo2.png" alt="Branding" style="width:100%">
+          <h3>Peachy Puppies</h3>
+          <p>Offical logo design for a goldendoodle breeding company in Georgia.</p>
         </div>
+        </div>
+
         <div class="column">
+          <div class="content">
             <img src="images/cover.png" alt="Branding" style="width:100%">
+            <h3>After You've Gone Cover Album</h3>
+          <p>Mockup Design for a cover album for the Charleston Chasers.</p>
+        </div>
           </div>
+
           <div class="column">
+            <div class="content">
             <img src="images/logo3.png" alt="Branding" style="width:100%">
+            <h3>West Side Stories</h3>
+          <p>Mockup Design for a bookshop/cafe.</p>
+        </div>
           </div>
+
           <div class="column">
+            <div class="content">
             <img src="images/poster.png" alt="Branding" style="width:100%">
+            <h3>Avenir Next Poster</h3>
+          <p>Mockup design for a specific font.</p>
+        </div>
           </div>
       </div>
     </div>
 
-    <footer>
-        <h3>&copy; Makayla Rockwood 2022</h3>
-        <h3><a href="contactme.html">Contact Me</a></h3>
-        <div class="social">
-            <a href="https://facebook.com" target="_blank">
-                <img src="images/icons-04.png" alt="fb icon">
-            </a>
-            <a href="https://www.linkedin.com/in/makayla-rockwood-163887142/" target="_blank">
-                <img src="images/icons-02.png" alt="linkedin icon">
-            </a>
-            <a href="https://instagram.com/kay_roxk" target="_blank">
-                <img src="images/icons-03.png" alt="instagram icon">
-            </a>
+      <div class="title">
+        <h1>Advertising</h1>
+      </div>
+
+      <div class="row">
+        <div class="column2">
+          <div class="content2">
+          <img src="images/ad01.png" alt="advertising" style="width:100%">
+          <h3>Suicide Prevention Ad Campaign</h3>
+          <p>Mockup design for an advertisment.</p>
         </div>
-    </footer>
+      </div>
+
+        <div class="column2">
+          <div class="content2">
+          <img src="images/ad02.png" alt="advertising" style="width:100%">
+          <h3>Suicide Prevention Ad Campaign</h3>
+          <p>Mockup design for an advertisment.</p>
+        </div>
+      </div>
+
+          <div class="column2">
+            <div class="content2">
+            <img src="images/poster1.png" alt="advertising" style="width:100%">
+            <h3>Tempest Poster</h3>
+            <p>Mockup design for a the Shakespeare play Tempest.</p>
+          </div>
+        </div>
+  
+          <div class="column2">
+            <div class="content2">
+            <img src="images/poster2.png" alt="advertising" style="width:100%">
+            <h3>Tempest Poster</h3>
+            <p>Mockup design for a the Shakespeare play Tempest.</p>
+          </div>
+        </div>
+
+          <div class="column2">
+            <div class="content2">
+            <img src="images/poster3.png" alt="advertising" style="width:100%">
+            <h3>Tempest Poster</h3>
+            <p>Mockup design for a the Shakespeare play Tempest.</p>
+          </div>
+      </div>
+  </div>
+
+    </div>
+
+    <footer>
+      <h3>&copy; Makayla Rockwood 2022</h3>
+      <h3><a href="contactme.html">Contact Me</a></h3>
+      <div class="social">
+          <a href="https://facebook.com" target="_blank">
+              <img src="images/icons-04.png" alt="fb icon">
+          </a>
+          <a href="https://www.linkedin.com/in/makayla-rockwood-163887142/" target="_blank">
+              <img src="images/icons-02.png" alt="linkedin icon">
+          </a>
+          <a href="https://instagram.com/kay_roxk" target="_blank">
+              <img src="images/icons-03.png" alt="instagram icon">
+          </a>
+      </div>
+  </footer>
     </div>
