--- a/wwr/Portfolio/index.html
+++ b/wwr/Portfolio/index.html
@@ -20,7 +20,7 @@
 			<li class="nav__item"><a href=photography.html>Photography</a></li>
 		</ul>
 	</nav>
-<body>
+
 	<div class="try this">
 		<a id="line_overlay">
 			<img class="line" src="images/line.png" alt="Line this">
@@ -33,24 +33,24 @@
 		<button class="btn resume">Resume</button>
 	</div>
 
-	<section class="section">
-		<h2>Project 1</h2>
-		<p>Image</p>
-	</section>
-	<section class="section">
-		<h2>Project 2</h2>
-		<p>Image</p>
-	</section>
-	<section class="section">
-		<h2>Project 3</h2>
-		<p>Image</p>
-	</section>
-	<section class="section">
-		<h2>Project 4</h2>
-		<p>Image</p>
+	<div id="demobox">
+		<img src="images/disney.png" alt="disney" style="width:90%;">
+		<h2>Travel and Budgeting App</h2>
+		<h3>This interaction design project was set to test the ability to create and test a calculator app. Within these guidelines I wanted to design a travel budgeting app. This would allow someone to be able to calculate their spending habits and be able to keep them within a specific range without going over.</h3>
+		</div>
 
-</body>
-</section>
+	<div id="demobox2">
+		<img src="images/simplec.png" alt="simplec" style="width:90%;">
+		<h2>Simple Cognition Mockup</h2>
+		<h3>This project was created to show the possibilities of making jobs and interactions easier and more accessible through desktop and mobile apps.</h3>
+		</div>
+
+	<div id="demobox3">
+		<img src="images/grocery.png" alt="grocery" style="width:90%;">
+		<h2>Interface Redesign</h2>
+		<h3>The challenge I set was to redesign the interface of an app called 'List Ease'. This app allows a person to keep track of their grocery list and how much food is in their pantry. When looking at the app itself you can see that the content is very outdated. Because of this, I started brainstorming ideas.</h3>
+		</div>
+	
 
     <footer>
         <h3>&copy; Makayla Rockwood 2022</h3>
@@ -67,8 +67,6 @@
             </a>
         </div>
     </footer>
-    </div>
-</body>
+ </div>
+ 
 </html>
-</div>
-</div>
