--- a/wwr/Portfolio/photography.html
+++ b/wwr/Portfolio/photography.html
@@ -10,41 +10,95 @@
 
 <div class="site">
 	
-	<nav class="nav">
-		<div class="nav__title">Makayla Rockwood</div>
+    <nav class="nav">
+		<a id="logo_link" href="index.html">
+			<img class="logo" src="images/mainlogo.png" alt="My Logo">
+		</a>
 		<ul class="nav__list">
 			<li class="nav__item"><a href=index.html>UI/UX Design</a></li> 
 			<li class="nav__item"><a href=graphicdesign.html>Graphic Design</a></li>
 			<li class="nav__item"><a href=photography.html>Photography</a></li>
 		</ul>
 	</nav>
+
+  <div class="hero">
+		<h1>Photography</h1>
+	</div>
+
+  <div class="title">
+		<h1>Yellowstone</h1>
+        <p>Project taking black and white photos at yellowstone national park. I wanted to show off strong contrast within the gradient of colors.</p>
+	</div>
     
       <div class="row"> 
         <div class="column">
           <img src="images/2554.jpg">
-          <img src="images/2560.jpg">
           <img src="images/2571.jpg">
-          <img src="images/2572.jpg">
           <img src="images/2574.jpg">
           <img src="images/2579.jpg">
+          <img src="images/2560.jpg">
+          <img src="images/2572.jpg">
         </div>
-        <div class="column">
-            <img src="images/2554.jpg">
-            <img src="images/2574.jpg">
-            <img src="images/2571.jpg">
-            <img src="images/2572.jpg">
-            <img src="images/2579.jpg">
-            <img src="images/2560.jpg">
-          </div>
-          <div class="column">
-            <img src="images/2571.jpg">
-            <img src="images/2560.jpg">
-            <img src="images/2579.jpg">
-            <img src="images/2572.jpg">
-            <img src="images/2554.jpg">
-            <img src="images/2574.jpg">
-          </div>
       </div>
+
+     <div class="title">
+		<h1>Environmental</h1>
+        <p>Project taking photos of my surroundings and all the beauty within. I was able to photograph how lighting creates the world around us and allows us to take it all in.</p>
+	</div>
+
+    <div class="row"> 
+        <div class="column">
+          <img src="images/e1.png">
+          <img src="images/e7.png">
+          <img src="images/e9.png">
+          <img src="images/e4.png">
+          <img src="images/e5.png">
+          <img src="images/e6.png">
+          <img src="images/e3.png">
+          <img src="images/e8.png">
+          <img src="images/e10.png">
+          <img src="images/e13.png">
+          <img src="images/e12.png">
+        </div>
+      </div>
+
+      <div class="title">
+		<h1>Abandoned Hospital</h1>
+        <p>Project taking photos of an abondoned hopital in St Anthony, Idaho for their Airbnb.</p>
+	</div>
+
+    <div class="row"> 
+        <div class="column">
+          <img src="images/h1.png">
+          <img src="images/h2.png">
+          <img src="images/h3.png">
+          <img src="images/h4.png">
+          <img src="images/h5.png">
+          <img src="images/h6.png">
+          <img src="images/h7.png">
+        </div>
+      </div>
+
+      <div class="title">
+		<h1>Portraits</h1>
+        <p>Portriat style images that have been taken over the years as a photographer.</p>
+	</div>
+
+    <div class="row"> 
+        <div class="column">
+          <img src="images/p1.png">
+          <img src="images/p2.png">
+          <img src="images/p3.png">
+          <img src="images/p4.png">
+          <img src="images/p5.png">
+          <img src="images/p6.png">
+          <img src="images/p7.png">
+          <img src="images/p8.png">
+          <img src="images/p9.png">
+          <img src="images/p10.png">
+        </div>
+      </div>
+
       <footer>
         <h3>&copy; Makayla Rockwood 2022</h3>
         <h3><a href="contactme.html">Contact Me</a></h3>
